# OPPO-Human-Segmentation

./: README.md
oppo_demo/: .gitignore  README.md  pubspec.yaml
oppo_demo/android/app/: CMakeLists.txt  build.gradle
oppo_demo/android/app/src/debug/: AndroidManifest.xml
oppo_demo/android/app/src/main/: AndroidManifest.xml
oppo_demo/android/app/src/main/cpp/: NDKLib.cpp  com_example_oppo_demo_JNIFunction.h
oppo_demo/android/app/src/main/java/com/example/oppo_demo/: JNIFunction.java  MainActivity.java
oppo_demo/ios/Runner/: Info.plist
oppo_demo/ios/Runner.xcodeproj/: project.pbxproj
oppo_demo/lib/: gallary.dart  image.dart  main.dart  utils.dart
oppo_demo/test/: widget_test.dart
oppo_demo/weights/: deeplab_mob.param
